--- a/ProyectoDivisaContentPrividerA/app/src/main/AndroidManifest.xml
+++ b/ProyectoDivisaContentPrividerA/app/src/main/AndroidManifest.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    
+
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission"/>
+
     <uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
     <uses-permission android:name="android.permission.WRITE_USER_DICTIONARY" />
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+
+    <queries>
+        <provider android:authorities="com.android.contacts"> </provider>
+    </queries>
 
     <application
         android:name=".MiApplication"
@@ -18,6 +25,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoDivisaContentPrividerA"
         tools:targetApi="31">
+        
+        <provider
+            android:authorities="net.ivanvega.proyectodivisacontentprividera"
+            android:name=".provider.MiProveedorDeContenido"
+            android:enabled="true"
+            android:exported="true" >
+        </provider>
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,6 +44,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        
+        
     </application>
 
 </manifest>
