SE AGREGO UN SERVICIO PARA ESCUCHAR EL ESTADO DE LA TELEFONIA MIENTRAS ES SERVICIO ESTA CORRIENDO. PRUEBEN Y LLES SIRVE PARA SU PROYECTO

--- a/MisBroadcastReceiverTraininng/app/src/main/AndroidManifest.xml
+++ b/MisBroadcastReceiverTraininng/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
 
     <application
         android:allowBackup="true"
@@ -30,9 +34,15 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.INPUT_METHOD_CHANGED" />
+                <action android:name="android.provider.Telephony.SMS_RECEIVE" />
             </intent-filter>
 
         </receiver>
+
+        <service android:name=".ServicePhoneStateWithBroadcastReceiver"
+            android:enabled="true" android:exported="true" >
+
+        </service>
 
     </application>
 
