--- a/MiAppConFacebookB/app/build.gradle
+++ b/MiAppConFacebookB/app/build.gradle
@@ -1,16 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    // Add the Google services Gradle plugin
-    id 'com.google.gms.google-services'
 }
 
 android {
-    namespace 'net.ivanvega.notpurhfcmclienteb'
+    namespace 'net.ivanvega.miappconfacebookb'
     compileSdk 33
 
     defaultConfig {
-        applicationId "net.ivanvega.notpurhfcmclienteb"
+        applicationId "net.ivanvega.miappconfacebookb"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -35,23 +33,13 @@ android {
 }
 
 dependencies {
-    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
-    
 
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:31.5.0')
-    // TODO: Add the dependencies for Firebase products you want to use
-    // When using the BoM, don't specify versions in Firebase dependencies
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    // Add the dependencies for any other desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
+    implementation 'com.facebook.android:facebook-login:latest.release'
 
-    implementation 'com.google.firebase:firebase-messaging-ktx'
-
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
